Use list that allows for null elements.